--- a/css/publications.css
+++ b/css/publications.css
@@ -3,8 +3,10 @@
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
-    background-color: white;
-    box-shadow: inset 0px 0px 200px #c99868;
+    scroll-margin-top: 100px;
+    margin: 2%;
+    box-shadow: 0px 0px 10px 5px #12456a;
+    border-radius: 10px;
 }
 
 .publications .section-name {
@@ -19,6 +21,15 @@
     align-items: center;
     padding: 20px 0px 20px 0px;
     border-bottom: 1px solid black;
+
+    transform: translateY(50px);
+    opacity: 0;
+    transition: transform 0.4s ease-out, opacity 0.4s ease-out;
+}
+
+.publication.active {
+    transform: translateX(0);
+    opacity: 1;
 }
 
 .publication .title {
