--- a/css/intro.css
+++ b/css/intro.css
@@ -4,9 +4,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    background: linear-gradient(0.15turn, #000b13 53%, #081b29 55%);
+    justify-content: center;
+    gap: 10%;
+    background: linear-gradient(0.15turn, #000b13 55%, #081b29 57%);
     color: white;
-    padding: 150px max(calc(100vw - 1250px), 50px) 100px max(calc(100vw - 1250px), 50px);
+    padding: 150px 0px 100px 0px;
     box-shadow: 0px 5px 20px #1e6597;
     z-index: 9;
 }
@@ -14,7 +16,8 @@
 .about-me {
     display: flex;
     flex-direction: column;
-    width: 650px;
+    max-width: 600px;
+    padding-left: 50px;
 }
 
 
@@ -30,11 +33,11 @@
 .about-me .intro-head.active {
     transform: translateX(0);
     opacity: 1;
+    transition-delay: 0.8s;
 }
 
 .about-me .body {
     line-height: 25px;
-    width: calc(100% - 100px);
 
     transition: transform 0.7s ease-out, opacity 0.7s ease-out;
     transform: translateX(100px);
@@ -45,6 +48,7 @@
 .about-me .body.active {
     transform: translateX(0);
     opacity: 1;
+    transition-delay: 1.3s
 }
 
 .intro img {
@@ -54,8 +58,8 @@
 }
 
 .intro .image {
-    position: absolute;
-    left: 65vw;
+    padding-left: 100px;
+    padding-right: 50px;
 
     transition: transform 0.7s ease-out, opacity 0.7s ease-out;
     transform: translateX(100px);
@@ -65,6 +69,7 @@
 .intro .image.active {
     transform: translateX(0);
     opacity: 1;
+    transition-delay: 0.3s
 }
 
 
@@ -83,9 +88,11 @@
 
 @media (max-width: 800px){
     .intro {
-        flex-direction: column;
+        flex-direction: column-reverse;
         justify-content: center;
         padding-top: 100px;
+        background: none;
+        background-color: #000b13; 
     }
     .intro .image {
         position: static;
