--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -5,14 +5,14 @@
 .nav-bar {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     position: fixed;
     top: 0px;
     left: 0px;
     right: 0px;
     height: 20px;
-    padding: 20px 300px 20px 300px;
+    padding: 20px 0px 20px 0px;
     font-size: 20px;
     background-color: none;
     cursor: default;
@@ -47,30 +47,3 @@
 
 
 
-@media (max-width: 1050px){
-    .nav-bar {
-        padding: 20px 220px 20px 220px;
-
-    }
-}
-
-@media (max-width: 950px){
-    .nav-bar {
-        padding: 20px 160px 20px 160px;
-
-    }
-}
-
-@media (max-width: 800px){
-    .nav-bar {
-        padding: 20px 100px 20px 100px;
-
-    }
-}
-
-@media (max-width: 700px){
-    .nav-bar {
-        padding: 20px 50px 20px 50px;
-
-    }
-}
