--- a/css/career.css
+++ b/css/career.css
@@ -14,81 +14,24 @@
 }
 
 .timeline {
-  position: relative;
-  max-width: 80%;
-  left: 10%;
-}
-
-.timeline .container {
-    position: relative;
-    width: 50%;
-}
-
-.timeline .content{
     display: flex;
     flex-direction: column;
-    margin: 10px 30px;
-    padding: 20px 30px;
-    background-color: rgb(255, 255, 255);
+    align-items: center;
     position: relative;
-    border-radius: 6px;
-    box-shadow: 0px 0px 10px #1e6597;
-
-    transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
-}
-.container.right .content {
-    transform: translateX(-100vw);
-}
-
-.container.left .content {
-    transform: translateX(100vw);
-}
-
-.timeline .content.active {
-  transform: translateX(0);
-}
-
-.timeline .left {
-    left: 0px;
-}
-
-.timeline .right {
-    left: 50%;
-}
-
-.time-stop {
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    font-size: 0px;
-    transition: font-size 0.2s ease-out, right 0.2s ease-out, left 0.2s ease-out;
-    text-shadow: 0px 0px 10px #1e6597;
-    color: #0f3149;
-}
-
-.time-stop.active {
-    font-size: 60px;
-    right: -21px;
-}
-
-.timeline .right .time-stop {
-    left: 0px;
-}
-
-.timeline .right .time-stop.active {
-    left: -15px;
+    max-width: 80%;
+    left: 10%;
 }
 
 .timeline::after {
     content: '';
     position: absolute;
-    width: 6px;
+    width: 4px;
     height: 0;
-    background-color: #0f3149;
-    box-shadow: 0px 0px 10px #1e6597;
+    background-color: #3c3c3c;
     border-radius: 10px;
-    top: 0;
-    left: 50%;
+    top: 0px;
+    left: calc(50% - 2px);
+    box-shadow: 10px 10px 5px gray;
     z-index: -1;
 }
 
@@ -96,21 +39,98 @@
   animation: moveline 1s linear forwards;
 }
 
+.time-stop {
+    transform: translateY(80px);
+    font-size: 0px;
+    transition: font-size 0.2s ease-out;
+    text-shadow: 10px 10px 5px gray;
+    color: #3c3c3c;
+}
+
+.time-stop.active {
+    font-size: 40px;
+}
+
+
 @keyframes moveline{
     0%{height: 0;}
     100%{height: 100%;}
 }
 
-.timeline .company-name {
+.timeline .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: calc(45vw - 50px);
 
 }
+
+.timeline .content-right,
+.timeline .content-left{
+    display: flex;
+    flex-direction: column;
+    padding: 20px 30px;
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    border-radius: 6px;
+    background-color: #dadada;
+
+    transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
+}
+.container .content-right {
+    box-shadow: 5px 5px 3px rgb(147, 147, 147);
+    transform: translateX(-100vw);
+}
+
+.container .content-left {
+    box-shadow: -5px 5px 3px rgb(147, 147, 147);
+    transform: translateX(100vw);
+}
+
+.timeline .content-right.active {
+  transform: translateX(calc(50% + 50px));
+}
+
+.timeline .content-left.active {
+  transform: translateX(calc(-50% - 50px));
+}
+
+.right-content-arrow {
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 36px;
+    z-index: 1;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-right: 20px solid #dadada;
+    left: -13px;
+}
+
+.left-content-arrow {
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 36px;
+    z-index: 1;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 20px solid #dadada;
+    right: -13px;
+}
+
+
+
+
+
+
 .timeline .period {
     margin-top: 5px;
     padding-bottom: 10px;
     color: rgb(134, 134, 134);
     border-bottom: 1px solid black;
-
 }
+
 .timeline .details {
     margin-top: 10px;
 }
