--- a/css/footer.css
+++ b/css/footer.css
@@ -5,27 +5,17 @@
     background-color: #081b29;
     padding-top: 30px;
     scroll-margin-top: 50px;
-
+    box-shadow: 0px -5px 5px #081b29;
+    margin-top: 50px;
 }
 
-.find-me {
+.find-me-head {
     font-size: 18px;
-    margin-top: 40px;
+    margin-bottom: 30px;
 }
 
-i.fa-github {
-  font-size: 40px;
-  margin-top: 10px;
-  text-shadow: 2px 2px 0px red;
-}
-
-.email-me {
-    font-size: 18px;
-    margin-top: 20px;
-}
-
-.email {
-    display: inline-block;
+.find-me-info {
+    line-height: 30px;
 }
 
 
