--- a/css/publications.css
+++ b/css/publications.css
@@ -4,9 +4,7 @@
     align-items: center;
     padding-top: 50px;
     scroll-margin-top: 100px;
-    margin: 2%;
-    box-shadow: 0px 0px 10px 5px #12456a;
-    border-radius: 10px;
+    box-shadow: 0px -10px 10px -5px #616161;
 }
 
 .publications .section-name {
