--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -13,7 +13,7 @@
     right: 0px;
     height: 20px;
     padding: 20px 0px 20px 0px;
-    font-size: 20px;
+    font-size: 1.25rem;
     background-color: none;
     cursor: default;
     color: var(--nav-bar-color);
