--- a/css/intro.css
+++ b/css/intro.css
@@ -22,7 +22,7 @@
 
 
 .about-me .intro-head {
-    font-size: 40px;
+    font-size: 2.5rem;
     margin-bottom: 20px;
 }
 
@@ -34,7 +34,7 @@
 
 .intro-profession {
     color: #3badff;
-    font-size: 30px;
+    font-size: 1.875rem;
     margin-bottom: 20px;
     font-weight: bold;
 }
