--- a/css/publications.css
+++ b/css/publications.css
@@ -8,7 +8,7 @@
 }
 
 .publications .section-name {
-    font-size: 40px;
+    font-size: 2.5rem;
     font-family: "Libre Baskerville";
     margin-bottom: 30px;
 }
@@ -31,7 +31,7 @@
 }
 
 .publication .title {
-    font-size: 25px;
+    font-size: 1.563rem;
     color: black;
     text-decoration: none;
     text-align: center;
@@ -41,7 +41,7 @@
 
 .publication .authors { 
     margin-top: 20px;
-    font-size: 15px;
+    font-size: 0.938rem;
     color: rgb(134, 134, 134);
 }
 
