--- a/css/career.css
+++ b/css/career.css
@@ -2,14 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 6.25rem;
+    padding-bottom: 6.25rem;
 }
 
 .career .section-name {
     font-size: 2.5rem;
     font-family: "Libre Baskerville";
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
     text-align: center;
 }
 
@@ -25,13 +25,13 @@
 .timeline::after {
     content: '';
     position: absolute;
-    width: 4px;
+    width: 0.25rem;
     height: 0;
     background-color: #3c3c3c;
-    border-radius: 10px;
-    top: 0px;
-    left: calc(50% - 2px);
-    box-shadow: 10px 10px 5px gray;
+    border-radius: 0.625rem;
+    top: 0;
+    left: calc(50% - 0.125rem);
+    box-shadow: 0.625rem 0.625rem 0.313rem gray;
     z-index: -1;
 }
 
@@ -40,10 +40,10 @@
 }
 
 .time-stop {
-    transform: translateY(80px);
+    transform: translateY(5rem);
     font-size: 0;
     transition: font-size 0.2s ease-out;
-    text-shadow: 10px 10px 5px gray;
+    text-shadow: 0.625rem 0.625rem 0.313rem gray;
     color: #3c3c3c;
 }
 
@@ -61,7 +61,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: calc(45vw - 50px);
+    max-width: calc(45vw - 3.125rem);
 
 }
 
@@ -69,54 +69,54 @@
 .timeline .content-left{
     display: flex;
     flex-direction: column;
-    padding: 20px 30px;
+    padding: 1.25rem 1.875rem;
     background-color: rgb(255, 255, 255);
     position: relative;
-    border-radius: 6px;
+    border-radius: 0.375rem;
     background-color: #dadada;
 
     transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.1);
 }
 .container .content-right {
-    box-shadow: 5px 5px 3px rgb(147, 147, 147);
+    box-shadow: 0.313rem 0.313rem 0.188rem rgb(147, 147, 147);
     transform: translateX(-100vw);
 }
 
 .container .content-left {
-    box-shadow: -5px 5px 3px rgb(147, 147, 147);
+    box-shadow: -0.313rem 0.313rem 0.188rem rgb(147, 147, 147);
     transform: translateX(100vw);
 }
 
 .timeline .content-right.active {
-  transform: translateX(calc(50% + 50px));
+  transform: translateX(calc(50% + 3.125rem));
 }
 
 .timeline .content-left.active {
-  transform: translateX(calc(-50% - 50px));
+  transform: translateX(calc(-50% - 3.125rem));
 }
 
 .right-content-arrow {
     height: 0;
     width: 0;
     position: absolute;
-    top: 36px;
+    top: 2.25rem;
     z-index: 1;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-right: 20px solid #dadada;
-    left: -13px;
+    border-top: 1.25rem solid transparent;
+    border-bottom: 1.25rem solid transparent;
+    border-right: 1.25rem solid #dadada;
+    left: -0.813rem;
 }
 
 .left-content-arrow {
     height: 0;
     width: 0;
     position: absolute;
-    top: 36px;
+    top: 2.25rem;
     z-index: 1;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-left: 20px solid #dadada;
-    right: -13px;
+    border-top: 1.25rem solid transparent;
+    border-bottom: 1.25rem solid transparent;
+    border-left: 1.25rem solid #dadada;
+    right: -0.813rem;
 }
 
 
@@ -125,18 +125,18 @@
 
 
 .timeline .period {
-    margin-top: 5px;
-    padding-bottom: 10px;
+    margin-top: 0.313rem;
+    padding-bottom: 0.625rem;
     color: rgb(134, 134, 134);
-    border-bottom: 1px solid black;
+    border-bottom: 0.063rem solid black;
 }
 
 .timeline .details {
-    margin-top: 10px;
+    margin-top: 0.625rem;
 }
 
 
-@media (max-width: 800px){
+@media (max-width: 50rem){
     .timeline {
         max-width: 98%;
         left: 1%;
