--- a/css/publications.css
+++ b/css/publications.css
@@ -2,25 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
-    scroll-margin-top: 100px;
-    box-shadow: 0px -10px 10px -5px #616161;
+    padding-top:3.125rem;
+    scroll-margin-top: 6.25rem;
+    box-shadow: 0 -0.625rem 0.625rem -0.313rem #616161;
 }
 
 .publications .section-name {
     font-size: 2.5rem;
     font-family: "Libre Baskerville";
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
 }
 
 .publication {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px 0px 20px 0px;
-    border-bottom: 1px solid black;
+    padding:1.25rem 01.25rem 0;
+    border-bottom: 0.063rem solid black;
 
-    transform: translateY(50px);
+    transform: translateY(3.125rem);
     opacity: 0;
     transition: transform 0.2s ease-out, opacity 0.2s ease-out;
 }
@@ -40,13 +40,13 @@
 
 
 .publication .authors { 
-    margin-top: 20px;
+    margin-top:1.25rem;
     font-size: 0.938rem;
     color: rgb(134, 134, 134);
 }
 
 .publication .doi { 
-    margin-top: 20px;
+    margin-top:1.25rem;
     color: rgb(134, 134, 134);
 }
 
