--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -12,8 +12,8 @@
     left: 0;
     right: 0;
     height:1.5rem;
-    padding:1.25rem 0 1.25rem 0;
-    font-size: 1.25rem;
+    padding:0.9rem 0 0.9rem 0;
+    font-size: 0.9rem;
     background-color: none;
     cursor: default;
     color: var(--nav-bar-color);
@@ -23,6 +23,11 @@
     -webkit-backdrop-filter: blur(1.25rem); /* Safari support */
     transition: color 0.15s;
     box-shadow: 0 0 0.625rem black;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .nav-bar div {
