--- a/css/career.css
+++ b/css/career.css
@@ -7,7 +7,7 @@
 }
 
 .career .section-name {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-family: "Libre Baskerville";
     margin-bottom: 1.875rem;
     text-align: center;
@@ -40,11 +40,12 @@
 }
 
 .time-stop {
-    transform: translateY(5rem);
+    transform: translateY(3rem);
     font-size: 0;
     transition: font-size 0.2s ease-out;
     text-shadow: 0.625rem 0.625rem 0.313rem gray;
     color: #3c3c3c;
+    line-height: 0;
 }
 
 .time-stop.active {
@@ -99,7 +100,7 @@
     height: 0;
     width: 0;
     position: absolute;
-    top: 2.25rem;
+    top: 1.9rem;
     z-index: 1;
     border-top: 1.25rem solid transparent;
     border-bottom: 1.25rem solid transparent;
@@ -111,7 +112,7 @@
     height: 0;
     width: 0;
     position: absolute;
-    top: 2.25rem;
+    top: 1.9rem;
     z-index: 1;
     border-top: 1.25rem solid transparent;
     border-bottom: 1.25rem solid transparent;
@@ -137,9 +138,34 @@
 
 
 @media (max-width: 50rem){
-    .timeline {
-        max-width: 98%;
-        left: 1%;
+    .timeline::after {
+        left: 0;
+    }
+    .timeline .content-right.active {
+        transform: translateX(calc(1.875rem));
+
+    }
+    .timeline .content-left.active {
+        transform: translateX(calc(1.875rem));
     }
 
+    .time-stop {
+        position: absolute;
+        transform: translateY(3rem);
+        left: -0.65rem;
+    }
+
+    .timeline{
+        align-items: flex-start;
+        gap: 2rem;
+    }
+    .left-content-arrow {
+        border-right: 1.25rem solid #dadada;
+        border-left: none;
+        left: -0.813rem;
+    }
+    .timeline .container {
+        max-width: none;
+        margin-right: 1rem;
+    }
 }
