--- a/css/intro.css
+++ b/css/intro.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     max-width: 37.5rem;
-    padding-left:3.125rem;
+    padding: 0 3.125rem 0 3.125rem;
 }
 
 
@@ -47,7 +47,7 @@
 
 .intro .image {
     padding-left: 6.25rem;
-    padding-right:3.125rem;
+    padding-right: 6.25rem;
 }
 
 
