--- a/css/publications.css
+++ b/css/publications.css
@@ -8,7 +8,7 @@
 }
 
 .publications .section-name {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-family: "Libre Baskerville";
     margin-bottom: 1.875rem;
 }
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:1.25rem 01.25rem 0;
+    padding:1.25rem 0 1.25rem 0;
     border-bottom: 0.063rem solid black;
 
     transform: translateY(3.125rem);
@@ -31,7 +31,7 @@
 }
 
 .publication .title {
-    font-size: 1.563rem;
+    font-size: 1.3rem;
     color: black;
     text-decoration: none;
     text-align: center;
@@ -40,14 +40,16 @@
 
 
 .publication .authors { 
-    margin-top:1.25rem;
+    margin-top:1rem;
     font-size: 0.938rem;
     color: rgb(134, 134, 134);
+    text-align: center;
 }
 
 .publication .doi { 
-    margin-top:1.25rem;
+    margin-top:1rem;
     color: rgb(134, 134, 134);
+    text-align: center;
 }
 
 .doi a {
