--- a/css/projects.css
+++ b/css/projects.css
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top:3.125rem;
-    scroll-margin-top: 6.25rem;
-    box-shadow: 0 -0.625rem 0.625rem -0.313rem #616161;
+    padding-top: 3.125rem;
+    scroll-margin-top: 3.25rem;
     margin: 0px 2rem;
 }
 
@@ -18,9 +17,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center ;
+    width: 100vw;
     gap: 5rem;
     padding:1.25rem 0 1.25rem 0;
-    border-bottom: 0.063rem solid black;
+    margin-top: 5rem;
+    padding-bottom: 5rem;
+    background: linear-gradient(#ffffff, #dddddd);
+    box-shadow: 0 0.2rem 0.2rem rgb(130, 130, 130);
 }
 
 
@@ -29,7 +33,7 @@
     width: 100%;
     max-width: 35rem;
     min-width: 25rem;
-    border: 1px solid black;
+    box-shadow: 0rem 0rem 2rem rgb(93, 93, 93);
 }
 .project-info {
     max-width: 25rem;
@@ -39,6 +43,7 @@
 
 .project .title {
     font-size: 1.3rem;
+    font-weight: bold;
     color: black;
     text-decoration: none;
     text-align: center;
@@ -46,25 +51,40 @@
 
 
 
-.project .authors { 
+.project .description { 
     margin-top:1rem;
     font-size: 0.938rem;
-    color: rgb(134, 134, 134);
+    color: rgb(171, 171, 171);
     text-align: center;
 }
 
-.project .doi { 
+.project .description a {
+    color: rgb(171, 171, 171);
+} 
+
+.project .links { 
     margin-top:1rem;
-    color: rgb(134, 134, 134);
+    color: rgb(79, 147, 255);
     text-align: center;
 }
 
-.doi a {
-    color: rgb(134, 134, 134);
+.links a {
+    color: rgb(79, 147, 255);
 }
 
 @media (max-width: 50rem) {
+    .projects {
+        margin: 0 1rem;
+    }
     .project {
         flex-direction: column;
+        gap: 2rem;
+    }
+    .project-image img {
+        display: block;
+        margin: auto;
+        width: 90%;
+        max-width: none;
+        min-width: 0;
     }
 }
