--- a/css/intro.css
+++ b/css/intro.css
@@ -66,14 +66,15 @@
     border-radius: 999rem;
     width: 2.5rem;
     height: 2.5rem;
-    background-color:#113b59;
+    background-color:#ffffff;
+    box-shadow: inset 0rem 0rem 0.3rem black;
 }
 .intro-contact div:hover {
     opacity: 0.7;
 }
 
 .intro-contact a {
-    color: #2e92da;
+    color: #003255;
 }
 .intro-contact div span {
     position: absolute;
@@ -122,12 +123,6 @@
     .about-me .body {
         padding-top: 1.875rem;
         width: auto;
-    }
-    .intro-contact div {
-        background-color:#0c2c43;
-    }
-    .intro-contact a {
-        color: #2a83c2;
     }
 
 }
